Force install latest version and tag docker images with version tag

--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -6,8 +6,20 @@ env:
   ENDPOINT: "rix1337/docker-feedcrawler"
 
 jobs:
+  version-check:
+    runs-on: ubuntu-latest
+    outputs:
+      output: ${{ steps.get-version.outputs.version }}
+    steps:
+      - id: get-version
+        run: | 
+          sudo apt-get update && apt-get install jq
+          VERSION=$(curl -Ls https://pypi.org/pypi/feedcrawler/json | jq -r .info.version)
+          echo $VERSION
+          echo "::set-output name=version::$VERSION"
   build:
     runs-on: ubuntu-latest
+    needs: version-check
     steps:
       - uses: actions/checkout@v2.3.3
       - uses: whoan/docker-build-with-cache-action@v5
@@ -15,5 +27,6 @@ jobs:
           username: "${{ secrets.DOCKERUSER }}"
           password: "${{ secrets.DOCKERPASS }}"
           image_name: "${{ env.ENDPOINT }}"
-          image_tag: latest
+          image_tag: latest,${{needs.version-check.outputs.output}}
           stages_image_name: "rix1337/cache-feedcrawler-latest"
+          
