--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -6,7 +6,7 @@ on:
     inputs:
       version:
         default: 'false'
-        required: false
+        required: true
 
 env:
   ENDPOINT: "rix1337/docker-feedcrawler"
