--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -6,7 +6,7 @@ on:
     inputs:
       version:
         default: 'false'
-        required: true
+        required: false
 
 env:
   ENDPOINT: "rix1337/docker-feedcrawler"
@@ -19,13 +19,14 @@ jobs:
     steps:
       - id: get-version
         run: | 
-          if [[ ${{ github.event.inputs.version }} == "false" ]]
+          if [ -z "${{ github.event.inputs.version }}" ]; then VS="false"; else VS=${{ github.event.inputs.version }}; fi
+          if [[ ${VS} == "false" ]]
           then
             echo "Grabbing latest feedcrawler version from pypi.org"
             VERSION=$(curl -Ls https://pypi.org/pypi/feedcrawler/json | jq -r .info.version)
           else
             echo "Using version from workflow_dispatch input"
-            VERSION=${{ github.event.inputs.version }}
+            VERSION=${VS}
           fi
           echo $VERSION
           echo "::set-output name=version::$VERSION"
