--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -42,4 +42,4 @@ jobs:
           image_name: "${{ env.ENDPOINT }}"
           image_tag: latest,${{needs.version-check.outputs.output}}
           stages_image_name: "rix1337/cache-feedcrawler-latest"
-          build_extra_args: Extra params for docker build (e.g. "--build-arg=VS=${{needs.version-check.outputs.output}}"
+          build_extra_args: "--build-arg=VS=${{needs.version-check.outputs.output}}"
