--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -36,6 +36,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.3
       - uses: whoan/docker-build-with-cache-action@v5
+        id: firstrun
+        continue-on-error: true
+        with:
+          username: "${{ secrets.DOCKERUSER }}"
+          password: "${{ secrets.DOCKERPASS }}"
+          image_name: "${{ env.ENDPOINT }}"
+          image_tag: latest,${{needs.version-check.outputs.output}}
+          stages_image_name: "rix1337/cache-feedcrawler-latest"
+          build_extra_args: "--build-arg=VS=${{needs.version-check.outputs.output}}"
+      - name: Sleep for 30 seconds before retry
+        if: steps.firstrun.outcome=='failure'
+        uses: jakejarvis/wait-action@master
+        with:
+          time: '1m'
+      - uses: whoan/docker-build-with-cache-action@v5
+        if: steps.firstrun.outcome=='failure'
         with:
           username: "${{ secrets.DOCKERUSER }}"
           password: "${{ secrets.DOCKERPASS }}"
