--- a/.github/workflows/BuildImage.yml
+++ b/.github/workflows/BuildImage.yml
@@ -29,12 +29,12 @@ jobs:
             VERSION=${VS}
           fi
           echo $VERSION
-          echo "::set-output name=version::$VERSION"
+          echo "version=$VERSION" >>$GITHUB_OUTPUT
   build:
     runs-on: ubuntu-latest
     needs: version-check
     steps:
-      - uses: actions/checkout@v2.3.3
+      - uses: actions/checkout@v3
       - uses: whoan/docker-build-with-cache-action@v5
         id: firstrun
         continue-on-error: true
